--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <h3 data-bind="text: level"></h3>
         <div data-bind="text: clickCount"></div>
         <img id="cat-img" src="" alt="cute cat" data-bind="click: incrementCounter, attr: {src: imgSrc}">
+        <h3>Nicknames:</h3>
+        <ul>
+            <!-- ko foreach: nicknames -->
+            <li><span data-bind="text: $data"></span></li>
+            <!-- /ko -->
+        </ul>
 
     </div>
     <script src="js/lib/knockout-3.2.0.js"></script>
