--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <title>Cat Clicker</title>
 </head>
 <body>
-    <ul id="cat-list"></ul>
-    <div id="cat">
+    <div>
+        <ul>
+            <!-- ko foreach: $root.catList -->
+            <li><span data-bind="text: name"></span></li>
+            <!-- /ko -->
+        </ul>
+    </div>
+
+    <div id="cat" data-bind="with: currentCat">
 
         <h2 data-bind="text: name"></h2>
         <h3 data-bind="text: level"></h3>
         <div data-bind="text: clickCount"></div>
-        <img id="cat-img" src="" alt="cute cat" data-bind="click: incrementCounter, attr: {src: imgSrc}">
+        <img id="cat-img" src="" alt="cute cat" data-bind="click: $parent.incrementCounter, attr: {src: imgSrc}">
         <h3>Nicknames:</h3>
         <ul>
             <!-- ko foreach: nicknames -->
